src/objects/Apttus_Config2__OrderLineItem__c.object
<CustomObject>
    <description>Represents a product or service line item associated with an order</description>
    <fields>
        <fullName>APTPS_Segment__c</fullName>
        <label>APTPS_Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_ATP_Check_Message__c</fullName>
        <description>This is the ATP Check message</description>
        <label>ATP Check Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ATP_Check_Status__c</fullName>
        <description>This is the ATP Check Status</description>
        <formula>IF( 
APTS_ATP_Cleared__c = TRUE, 
IF( 
OR(ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c, &apos;Operating Order&apos;), 
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c, &apos;Route Sales Order&apos;), 
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c, &apos;Standard Order&apos;)), 
IF( 
AND(Apttus_Config2__Quantity__c &lt;= APTS_Expected_Delivery_Quantity__c, 
APTS_Requested_Delivery_Date__c = APTS_Expected_Delivery_Date__c), 
IMAGE(&quot;/resource/1498724254000/GreenTrafficLight&quot;, &quot;OK&quot;), 
IF(AND(Apttus_Config2__Quantity__c &gt; APTS_Expected_Delivery_Quantity__c, 
APTS_Requested_Delivery_Date__c = APTS_Expected_Delivery_Date__c), 
IMAGE(&quot;/resource/1498724234000/YellowTrafficLight&quot;, &quot;OK&quot;), 
IMAGE(&quot;/resource/1498724205000/RedTrafficLight&quot;, &quot;OK&quot;)) 
), 
IF( 
APTS_Requested_Installation_Date__c &gt;= APTS_Expected_Delivery_Date__c, 
IMAGE(&quot;/resource/1498724254000/GreenTrafficLight&quot;, &quot;OK&quot;), 
IMAGE(&quot;/resource/1498724205000/RedTrafficLight&quot;, &quot;OK&quot;) 
) 
), 
IMAGE(&quot;/resource/1498724270000/GreyTrafficLight&quot;, &quot;OK&quot;) 
)</formula>
        <label>ATP Check Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ATP_Cleared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the ATP cleared</description>
        <label>ATP Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_Address__c</fullName>
        <description>This is the Additional address</description>
        <label>Additional Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_chargesO__c</fullName>
        <description>Sum of Add_charges out of SAP</description>
        <label>Additional charges</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Additional_charges__c</fullName>
        <label>Additional charges</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Adjustment_Line_Item_Count__c</fullName>
        <label>Adjustment Line Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_AdminOrderProrationRatio__c</fullName>
        <label>AdminOrderProrationRatio</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Alternative_Machine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Alternative Machine</description>
        <label>Alternative Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Apttus_Order_Line_Item_Number__c</fullName>
        <formula>if(OR(ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Machine Order&apos;),ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Admin Order&apos;),ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Credit Memo&apos;),ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Debit Memo&apos;)),
if(OR(ISPICKVAL(APTS_Refurbished_or_New__c,&apos;U&apos;),ISPICKVAL(APTS_Refurbished_or_New__c,&apos;N&apos;)), if(Apttus_Config2__PreviousVersion__c != null, TEXT(APTS_Refurbished_or_New__c)+RIGHT(Apttus_Config2__OriginalLineNumber__c,5), TEXT(APTS_Refurbished_or_New__c)+RIGHT(Name,5)), &apos;&apos;), 
if(OR(ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Standard Order&apos;), ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Route Sales Order&apos;), ISPICKVAL(Apttus_Config2__OrderId__r.APTS_Order_Type__c,&apos;Operating Order&apos;)),
if(Apttus_Config2__PreviousVersion__c != null, RIGHT(Apttus_Config2__OriginalLineNumber__c,6), RIGHT(Name,6)), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Apttus Order Line Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Area__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Asset_Details__c</fullName>
        <description>This is the Asset Details</description>
        <label>Asset Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_BasePriceOverride__c</fullName>
        <formula>Apttus_Config2__BasePriceOverride__c</formula>
        <label>Base Price Override</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Batch__c</fullName>
        <description>This is the Batch</description>
        <label>Batch</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_To_SAP_Customer_ID__c</fullName>
        <description>This is the Bill To SAP Customer ID</description>
        <formula>Apttus_Config2__BillToAccountId__r.SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To SAP Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Ingredients_and_Payer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Bill to Party (Ingredients)</description>
        <label>Bill to Party (Ingredients)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Bill to Party (Ingredients))</relationshipLabel>
        <relationshipName>Order_Line_Itemss</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Bill_to_Party_Machines_Services__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Bill to Party (Machines &amp; Services)</description>
        <label>Bill to Party (Machines &amp; Services)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Bill to Party (Machines &amp; Services))</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_BillingSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Schedule</label>
        <referenceTo>Apttus_Billing__BillingSchedule__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Building__c</fullName>
        <label>Building</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage_Condition__c</fullName>
        <formula>IF (APTS_Option_Group_Text__c = &apos;Technical Service&apos;, &apos;YSFC&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call out Coverage Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Call_Out_Coverage__c</fullName>
        <description>Call Out Coverage</description>
        <label>Call Out Coverage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Label__c</fullName>
        <description>Label of the category</description>
        <label>Category Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Category_Level__c</fullName>
        <description>Category level field for CER implementation</description>
        <label>Category Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>APTS_Category_Level</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_CommercialMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Commercial Machine</description>
        <label>Commercial Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationFileURL__c</fullName>
        <label>Configuration File URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_ConfigurationManualAgreementsURL__c</fullName>
        <label>Configuration Manual &amp; Agreements URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_Confirmed_Date_ATP_Check__c</fullName>
        <description>This is the Confirmed Date-ATP Check</description>
        <label>Confirmed Date-ATP Check</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Confirmed_Quantity_ATP_Check__c</fullName>
        <description>This is the Confirmed Quantity-ATP Check</description>
        <label>Confirmed Quantity-ATP Check</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Consumer_Price__c</fullName>
        <label>Consumer Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Conversion_Completion_Date__c</fullName>
        <description>This is the Conversion Completion Date</description>
        <label>Conversion Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Count_of_TPR_Order_Line_Items__c</fullName>
        <label>Count of TPR Order Line Items</label>
        <summaryFilterItems>
            <field>Apttus_Config2__OrderAdjustmentLineItem__c.Apttus_Config2__Type__c</field>
            <operation>equals</operation>
            <value>Temporary Discount</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus_Config2__OrderAdjustmentLineItem__c.Apttus_Config2__LineItemId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>APTS_Counter_ID__c</fullName>
        <description>This is the Counter ID</description>
        <label>Counter ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Credit_Proposal_XC09_Block__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Credit BillingSchedules will be skipped in creating XC09 orders if this field is set to TRUE.</description>
        <label>Credit Proposal (XC09 Block)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Call_Out_Coverage__c</fullName>
        <label>Cumulative  Call Out Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Labour_coverage__c</fullName>
        <label>Cumulative Labour coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Cumulative_Spare_Parts_Coverage__c</fullName>
        <label>Cumulative Spare Parts Coverage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_Delivery_Date__c</fullName>
        <description>This is the Customer Delivery Date</description>
        <label>Customer Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Customer_PO_Item_Number__c</fullName>
        <description>Customer PO Item Number</description>
        <label>Customer PO Item Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_De_Install_by_LSP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to store the LSP status</description>
        <label>(De-) Install by LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_De_Installation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>De-Installation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_De_installation_Date_Authorized__c</fullName>
        <description>This is the De installation Date which is authorized to be Updated by a TS user</description>
        <label>De-installation Date (Authorized)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_De_installation_Date__c</fullName>
        <description>This is the De-Installation Date</description>
        <label>De-installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Deinstall_NonJDEMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the De Install Non Supported Machine</description>
        <label>De-install Non-JDE Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Instructions__c</fullName>
        <description>This is the Delivery Instructions</description>
        <label>Delivery Instructions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Delivery_Timeframes__c</fullName>
        <description>This is the Delivery Timeframes</description>
        <label>Delivery Timeframes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Description__c</fullName>
        <description>This is the Description</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_EAN_Code__c</fullName>
        <description>This is the EAN Code</description>
        <label>EAN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Elevator_Available__c</fullName>
        <description>This is the Elevator Available</description>
        <label>Elevator Available</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_In_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Error In Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Delivery_Date__c</fullName>
        <description>This is the Expected Delivery Date</description>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Delivery_Quantity__c</fullName>
        <description>This is the Expected Delivery Quantity</description>
        <label>Expected Delivery Quantity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_Invoice_Line_Number__c</fullName>
        <description>Ext Invoice Line Number</description>
        <label>Ext Invoice Line Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_Line_Item_Adjusted_Price_Ex_VAT__c</fullName>
        <description>This field denotes the Digital Line item adjusted price ex VAT</description>
        <label>External Line Item Adjusted Price Ex VAT</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Ext_Line_Item_Adjustment_Amount__c</fullName>
        <description>This denotes the Digital Line item adjustment amount</description>
        <label>External Line Item Adjustment Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Extended_cost__c</fullName>
        <label>Extended cost</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_External_Line_Item_Adjusted_Price__c</fullName>
        <inlineHelpText>This field denotes the Digital Line item adjusted price</inlineHelpText>
        <label>External Line Item Adjusted Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_External_Line_Item_List_Price__c</fullName>
        <description>This field denotes the Digital Line item original amount</description>
        <label>External Line Item List Price</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_External_Line_Item_Tax_Amount__c</fullName>
        <label>External Line Item Tax Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_External_Line_Item_VAT_Amount__c</fullName>
        <description>This denotes the Digital Line item VAT amount</description>
        <label>External Line Item VAT Amount</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Finance_ID__c</fullName>
        <formula>APTS_Physical_Asset__r.APTS_FinanceId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Floor__c</fullName>
        <label>Floor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Charge_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freight Charge Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Freight_Charge__c</fullName>
        <description>The Freight Charge</description>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Global_linkage_ID__c</fullName>
        <label>Global linkage ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Good_Receiving_Hours__c</fullName>
        <description>This is the Good Receiving Hours</description>
        <label>Good Receiving Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Goods_Issue_Date__c</fullName>
        <description>This is the Goods Issue Date(Transportation Date)</description>
        <label>Goods Issue Date(Transportation Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Contact_Persons__c</fullName>
        <description>This is the Installation contact persons</description>
        <label>Installation Contact Persons</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Contact_Phone__c</fullName>
        <description>Installation Contact Phone</description>
        <label>Installation Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Date_Authorized__c</fullName>
        <description>This is the Installation  Date which is authorized to be Updated by a TS user</description>
        <inlineHelpText>This is the Installation  Date which is authorized to be Updated by a TS user</inlineHelpText>
        <label>Installation Date (Authorized)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Date__c</fullName>
        <label>Installation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Installation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Installation required</description>
        <label>Installation Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Contracted_Product__c</fullName>
        <description>This is the Is Contracted Product</description>
        <label>Is Contracted Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Is_Ingredient__c</fullName>
        <formula>IF( OR(
       CONTAINS( Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c, &apos;Coffee&apos;),
       CONTAINS( Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c, &apos;Tea&apos;), 
       CONTAINS( Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c, &apos;&amp;More&apos;)) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Ingredient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Lift_Aid_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Is Lift Aid Needed</description>
        <label>Is Lift Aid Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Not_Option__c</fullName>
        <description>This is the Is not option</description>
        <formula>IF(ISBLANK( Apttus_Config2__OptionId__c ),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Not_Rollup_Line__c</fullName>
        <formula>OR(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Misc&apos;),ISPICKVAL(Apttus_Config2__LineType__c, &apos;Option&apos;), AND(ISPICKVAL(Apttus_Config2__LineType__c, &apos;Product/Service&apos;), Apttus_Config2__HasOptions__c = FALSE))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Not Rollup Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Primary_L1_Line__c</fullName>
        <formula>AND(
	ISPICKVAL(Apttus_Config2__LineType__c,&quot;Product/Service&quot;), 
	OR( 
		AND(
			ISPICKVAL(APTS_Type_of_Contract__c,&quot;Sales&quot;), 
			ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
			OR(
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
                                ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD01&quot;),
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD02&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;)
				)
			),
		AND(
			ISPICKVAL(APTS_Type_of_Contract__c,&quot;Trial&quot;), 
			ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
			OR(
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
                                ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD01&quot;),
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD02&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA23&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB23&quot;)
				)
			),
		AND(
			OR(
				ISPICKVAL(APTS_Type_of_Contract__c,&quot;Rent&quot;),
				ISPICKVAL(APTS_Type_of_Contract__c,&quot;RentBuy&quot;),
				ISPICKVAL(APTS_Type_of_Contract__c,&quot;Free on Loan&quot;),
				ISPICKVAL(APTS_Type_of_Contract__c,&quot;Consumption&quot;)
				), 		
			ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Rental Fee&quot;),			
			OR(
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA13&quot;),
                                ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD01&quot;),
ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD02&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB13&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA14&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD09&quot;),
                                ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XC09&quot;)
				)
			),
		AND(
			ISPICKVAL(APTS_Type_of_Contract__c,&quot;Subscription&quot;), 
			ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;),
			OR(
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XA01&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB01&quot;),
				ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XB02&quot;)
				)
			),
		AND(
                                AND(
				ISPICKVAL(APTS_Type_of_Contract__c,&quot;Sales&quot;), 
                                       ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Sales Price&quot;)
				),
			OR(
                                     ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD09&quot;),	
			             ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XC09&quot;)
                                 )
			
			),
		AND(
			ISPICKVAL(APTS_Type_of_Contract__c,&quot;Consumption&quot;),
			ISPICKVAL(Apttus_Config2__ChargeType__c,&quot;Usage Fee&quot;),
			ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &quot;XD12&quot;)
			)
		)
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Primary L1 Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Is_Primary_L1_Parent__c</fullName>
        <label>Is Primary L1 Parent</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Item_Category_Adjustment__c</fullName>
        <label>Item Category Adjustment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YOCI</fullName>
                </value>
                <value>
                    <fullName>YOFT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Item_Category__c</fullName>
        <description>This is the Item Category</description>
        <label>Item Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A01</fullName>
                    <label>Ingredient consignment</label>
                </value>
                <value>
                    <fullName>A02</fullName>
                    <label>Ingredient free of charge</label>
                </value>
                <value>
                    <fullName>A03</fullName>
                    <label>Machine free on loan</label>
                </value>
                <value>
                    <fullName>A04</fullName>
                    <label>Machine free of charge</label>
                </value>
                <value>
                    <fullName>A05</fullName>
                    <label>Machine rental</label>
                </value>
                <value>
                    <fullName>A06</fullName>
                    <label>Free of charge service</label>
                </value>
                <value>
                    <fullName>A07</fullName>
                    <label>Trial Item to Invoice</label>
                </value>
                <value>
                    <fullName>A08</fullName>
                    <label>Machine FOL (service option)</label>
                </value>
                <value>
                    <fullName>A09</fullName>
                    <label>Machine FOC ( service option)</label>
                </value>
                <value>
                    <fullName>A10</fullName>
                    <label>Machine rental (service option)</label>
                </value>
                <value>
                    <fullName>A11</fullName>
                    <label>Machine FOL (free service option)</label>
                </value>
                <value>
                    <fullName>A12</fullName>
                    <label>Machine(service option)</label>
                </value>
                <value>
                    <fullName>A01-Ingredient consignment</fullName>
                    <isActive>false</isActive>
                    <label>A01-Ingredient consignment</label>
                </value>
                <value>
                    <fullName>A02-Ingredient free of charge</fullName>
                    <isActive>false</isActive>
                    <label>A02-Ingredient free of charge</label>
                </value>
                <value>
                    <fullName>A03-Machine free on loan</fullName>
                    <isActive>false</isActive>
                    <label>A03-Machine free on loan</label>
                </value>
                <value>
                    <fullName>A04-Machine free of charge</fullName>
                    <isActive>false</isActive>
                    <label>A04-Machine free of charge</label>
                </value>
                <value>
                    <fullName>A05-Machine rental</fullName>
                    <isActive>false</isActive>
                    <label>A05-Machine rental</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Item_Relevant_for_SAP__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Item Relevant for SAP</description>
        <label>Item Relevant for SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_Line_Item_Number__c</fullName>
        <label>JDE Line Item Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_JDE_crockeryVolumeSize__c</fullName>
        <label>JDE crockery volume size</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Delivery_Date__c</fullName>
        <description>This is the LSP Delivery Date</description>
        <label>LSP Delivery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Description__c</fullName>
        <label>LSP Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Movement_Date__c</fullName>
        <description>This is the LSP Movement Date</description>
        <label>LSP Movement Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_LSP_Pick_Up_Date__c</fullName>
        <description>This is the LSP Pick-Up Date</description>
        <label>LSP Pick-Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage_Condition__c</fullName>
        <formula>IF (APTS_Option_Group_Text__c = &apos;Technical Service&apos;, &apos;YSFL&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Coverage Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Labour_Coverage__c</fullName>
        <description>Labour Coverage</description>
        <label>Labour Coverage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Leave_At_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Leave at Customer</description>
        <label>Leave At Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Loading_Date__c</fullName>
        <description>This is the Loading Date</description>
        <label>Loading Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Location_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Location From</description>
        <label>Location From</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Order Line Items (Location From)</relationshipLabel>
        <relationshipName>Order_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Age__c</fullName>
        <description>This is the Machine Age</description>
        <label>Machine Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Machine_Configuration__c</fullName>
        <description>This is the Machine Configuration</description>
        <label>Machine Configuration</label>
        <type>Url</type>
    </fields>
</CustomObject>